@@ -1,0 +1,9 @@
+	"cmr10.pk" is in PK format
+	checksum		= 4BF16079
+	design size		= 10485760 2^{-20} points = 10 points
+	horizontal		= 544093 2^{-16} dots/point = 600 dpi
+	vertical		= 544093 2^{-16} dots/point = 600 dpi
+				
+
+EXIT Code (errorlevel)		= 0
+No AMS Font
