@@ -1,0 +1,7 @@
+	"eufm10" is a tfm file :  0  -> 127
+	checksum		= 8F256EB2
+	design size		= 10485760 2^{-20} points = 10 points
+				 (AMSTeX 2.0 or newer) 
+
+EXIT Code (errorlevel)		= 4
+New eufm 
